# AI-LAB

./: .gitignore  main.py  pyproject.toml
configs/: base.yaml
scripts/: learn_linear.py  split_and_metrics.py  train_mnist.py
src/ai_lab/: metrics.py
tests/: test_metrics.py
